add the button using btn-primary

--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,9 @@
     }
 #header1
     {
-    text-align: center;
     }
 .d1{
-    text-shadow:5px 2px 6px #000;text-align: center;
+    text-shadow:5px 2px 6px #000;
     }
 #button
     {
